--- a/motor_p/CMakeLists.txt
+++ b/motor_p/CMakeLists.txt
@@ -56,7 +56,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
    FILES
-   AddTwoInts.srv
+   Motor_toggle.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -159,7 +159,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-   scripts/add_two_ints_server.py
+   scripts/motor_toggle_server.py
+   scripts/motor_toggle_client.py
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
 
